<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Casa Minha</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buscar">Buscar</string>
    <string name="inserir">Inserir</string>
    <string name="relatorio">Relatório</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="labelTot">Total em Vendas</string>
    <string name="notSet">—</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_relatorio">Relatorio</string>
    <string name="valorHint">R$ 80.000,00</string>
    <string name="valorCHint">R$ 200,00</string>
    <string name="endHint">Rua do Sol, 23</string>
    <string name="tipo_prompt">—</string>
    <string name="quartos_prompt">—</string>
    <string name="noneFound">Nenhum registro encontrado</string>
    <string name="vendido">Vendido!</string>
    <string name="disponivel">Disponivel</string>
    <string name="vender">Vender</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="removido">Removido!</string>

    <string-array name="tipo_arrays">
        <item>Casa na rua</item>
        <item>Casa em condomínio</item>
        <item>Apartamento</item>
    </string-array>
    <string-array name="quartos_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4 ou mais</item>
    </string-array>

    <string name="title_activity_inserir">Inserir</string>
    <string name="tipoLabel">Tipo: </string>
    <string name="valorLabel">Valor: </string>
    <string name="valorCLabel">Condomínio: </string>
    <string name="endLabel">Endereço: </string>
    <string name="qtosLabel">Quartos: </string>
    <string name="statusLabel">Disponibilidade: </string>
    <string name="title_activity_detalhe">Detalhe</string>

</resources>
