<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fundorepeat"
    tools:context=".Inserir" >

  	<TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/tipoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/tipoLabel" />

            <Spinner
                android:id="@+id/tipo_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_arrays"
                android:prompt="@string/tipo_prompt" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/valorCLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/valorCLabel" />
            
            <EditText android:id="@+id/valorC"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:inputType="numberDecimal"
		        android:hint="@string/valorCHint" 
		        />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/qtosLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/qtosLabel" />

            <Spinner
                android:id="@+id/qtos_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/quartos_arrays"
                android:prompt="@string/quartos_prompt" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/endLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/endLabel" />
            
            <EditText android:id="@+id/endereco"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:lines="2"
		        android:hint="@string/endHint" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/valorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/valorLabel" />
            
            <EditText android:id="@+id/valor_et"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:inputType="numberDecimal"
		        android:hint="@string/valorHint" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

          

            <Button
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/salvar"
                android:onClick="onClick" />
            
        </TableRow>

    </TableLayout>

</LinearLayout>
