<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fundorepeat"
    tools:context=".Detalhe" >

  	<TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/tipoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/tipoLabel" />

            <TextView
		        android:id="@+id/tipo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="Casa na rua" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/valorCLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/valorCLabel" />
            
            <TextView
		        android:id="@+id/valorCond"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="R$ 200,00"/>
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/qtosLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/qtosLabel" />

            <TextView
		        android:id="@+id/qtos"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="3" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/endLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/endLabel" />
            
            <TextView
		        android:id="@+id/endereco"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:lines="2"
		        android:text="Rua Bolinha, 23" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/valorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/valorLabel" />
            
            <TextView
		        android:id="@+id/valor"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="R$ 80.000,00"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/statusLabel" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:text="@string/vendido" />

            <!-- <Button
                android:id="@+id/salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:onClick="salvarStatus" /> -->
            
        </TableRow>

    </TableLayout>

</LinearLayout>
