<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundorepeat"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Buscar" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/tipoBtn"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:src="@drawable/casa" />

            <Spinner
                android:id="@+id/tipo_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_arrays"
                android:prompt="@string/tipo_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/qtoBtn"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:src="@drawable/bed" />

            <Spinner
                android:id="@+id/qtos_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/quartos_arrays"
                android:prompt="@string/quartos_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/valorBtn"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:src="@drawable/valor" />

            <EditText android:id="@+id/valor_et"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:inputType="numberDecimal"
		        android:hint="@string/valorHint" />

            <Button
                android:id="@+id/buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:text="@string/buscar"
                android:onClick="buscarImoveis" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3" >

        <LinearLayout
            android:id="@+id/listagemImoveis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Inflate com a listagem dos imóveis vendidos. Usar template lista_imoveis.xml -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>
