<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fundorepeat"
    android:layout_gravity="center"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:onClick="openBuscar" >

        <ImageView
            android:id="@+id/buscarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/buscar" />

        <TextView
            android:id="@+id/buscarTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:layout_marginLeft="10sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:onClick="openInserir" >

        <ImageView
            android:id="@+id/inserirBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/inserir" />

        <TextView
            android:id="@+id/inserirTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inserir"
            android:layout_marginLeft="10sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:onClick="openRelatorio" >

        <ImageView
            android:id="@+id/relBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/relatorio" />

        <TextView
            android:id="@+id/relTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relatorio"
            android:layout_marginLeft="10sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>
